--- a/style.css
+++ b/style.css
@@ -4,3 +4,40 @@
     box-sizing: border-box;
     font-family: 'Times New Roman', Times, serif;
 }
+
+body {
+    width: 100%;
+}
+
+nav {
+    width: 100%;
+    height: 70px;
+}
+
+.left-nav {
+    margin-left: 30px;
+}
+
+.left-nav a {
+    text-decoration: none;
+    color: rgb(60, 117, 82);
+}
+
+.main-nav {
+    display: flex;
+    justify-content: space-between;
+    width: 400px;
+}
+
+.main-nav a {
+    text-decoration: none;
+    color: black;
+}
+
+.right-nav {
+    display: flex;
+    justify-content: space-evenly;
+    padding-right: 30px;
+    margin-right: 10px;
+    width: 100px;
+}
