--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ nav {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    height: 500px;
+    height: 800px;
 }
 
 .main_dotted {
@@ -96,6 +96,10 @@ nav {
     width: 25%;
     padding: 20px;
     text-align: center;
+}
+
+.main_contents p {
+    text-align: left;
 }
 
 .main_image {
@@ -149,3 +153,187 @@ nav {
 
 
 /* trusted company */
+
+.trusted_company {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 200px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: rgba(232, 232, 232, 0.386);
+}
+
+.trusted_company .trusted_content {
+    font-weight: 500;
+}
+
+.trusted_company .company_logos {
+    margin-top: 20px;
+    display: flex;
+    width: 100%;
+    justify-content: space-evenly;
+}
+
+.trusted_company .company_logos img {
+    object-fit: contain;
+    filter: grayscale(100%);
+    width: 100%;
+}
+
+
+/* hot deals */
+
+.hot_deals {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.hot_deals .hot_left {
+    width: 20%;
+}
+
+.hot_deals .hot_right {
+    width: 60%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.hot_deals .hot_right div {
+    width: 100%;
+    padding-right: 60px;
+}
+
+.hot_deals .hot_right div h4 {
+    font-weight: 500;
+}
+
+
+/* about us */
+
+.about_us {
+    display: flex;
+    flex-direction: column;
+    padding-top: 70px;
+    padding-bottom: 70px;
+    width: 100%;
+    height: 600px;
+}
+
+.about_us .top {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
+}
+
+.about_us .top .left_top {
+    margin-right: 300px;
+    color: rgb(63, 109, 94);
+}
+
+.about_us .top .right_top {
+    margin-left: 300px;
+}
+
+.about_us .top .right_top button {
+    border: none;
+    outline: none;
+    background-color: #f1f0f0e3;
+    color: rgb(63, 109, 94);
+    padding: 10px 15px;
+    margin-left: 3px;
+    margin-right: 3px;
+    border-radius: 2px;
+    box-shadow: 0 30px 25px rgba(98, 231, 164, 0.386);
+}
+
+.bottom {
+    display: flex;
+    align-items: center;
+    color: rgb(63, 109, 94);
+    padding-bottom: 40px;
+}
+
+.bottom .left_bottom {
+    display: flex;
+    flex-direction: column;
+    margin-left: 40px;
+}
+
+.bottom .left_bottom .top_right_bottom {
+    display: flex;
+    justify-content: space-evenly;
+    padding-bottom: 10px;
+    margin-left: 30px;
+    margin-right: 20px;
+}
+
+.bottom .left_bottom .top_right_bottom div {
+    padding-right: 50px;
+}
+
+.bottom .left_bottom .bottom_right_bottom {
+    display: flex;
+    justify-content: space-evenly;
+    padding-bottom: 10px;
+    margin-left: 30px;
+    margin-right: 20px;
+}
+
+.bottom .left_bottom .bottom_right_bottom div {
+    padding-right: 50px;
+}
+
+.bottom .right_bottom {
+    display: flex;
+    width: 60%;
+    height: 100%;
+    padding-right: 60px;
+}
+
+.bottom .right_bottom .left_right_bottom {
+    display: flex;
+    flex-direction: column;
+    padding-top: 25px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.bottom .right_bottom .left_right_bottom div {
+    width: 100%;
+    padding: 8px;
+}
+
+.bottom .right_bottom .left_right_bottom div img {
+    width: 288px;
+    height: 202px;
+    object-fit: contain;
+}
+
+.bottom .right_bottom .right_right_bottom {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 25px;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.bottom .right_bottom .right_right_bottom div {
+    width: 100%;
+    padding: 8px;
+}
+
+.bottom .right_bottom .right_right_bottom div img {
+    width: 288px;
+    height: 202px;
+    object-fit: contain;
+}
