--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 nav {
     width: 100%;
-    height: 70px;
+    height: auto;
 }
 
 .left-nav {
@@ -49,7 +49,9 @@ nav {
     display: flex;
     justify-content: space-between;
     width: 100%;
-    height: 800px;
+    height: auto;
+    margin-bottom: 50px;
+    margin-top: 20px;
 }
 
 .main_dotted {
@@ -160,9 +162,9 @@ nav {
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 200px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    height: auto;
+    padding-top: 40px;
+    padding-bottom: 40px;
     background-color: rgba(232, 232, 232, 0.386);
 }
 
@@ -190,6 +192,7 @@ nav {
     padding-top: 100px;
     padding-bottom: 100px;
     width: 100%;
+    height: auto;
     display: flex;
     justify-content: space-evenly;
 }
@@ -220,9 +223,8 @@ nav {
     display: flex;
     flex-direction: column;
     padding-top: 70px;
-    padding-bottom: 70px;
     width: 100%;
-    height: 600px;
+    height: auto;
 }
 
 .about_us .top {
@@ -258,8 +260,6 @@ nav {
     display: flex;
     align-items: center;
     color: rgb(63, 109, 94);
-    padding-bottom: 40px;
-    margin-bottom: 80px;
 }
 
 .bottom .left_bottom {
@@ -347,7 +347,7 @@ nav {
     display: flex;
     flex-direction: column;
     width: 100%;
-    height: 800px;
+    height: auto;
     color: rgb(63, 109, 94);
     margin-bottom: 40px;
 }
@@ -492,8 +492,102 @@ nav {
 /* clients */
 
 .clients {
-    height: 700px;
+    height: auto;
     padding-top: 70px;
-    margin-top: 50px;
     width: 100%;
+    margin-bottom: 30px;
+    color: rgb(60, 117, 82);
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(232, 232, 232, 0.386);
+}
+
+.clients .client_top {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.clients .client_top .client_top_left {
+    margin-right: 80px;
+    padding-right: 30px;
+}
+
+.clients .client_top .client_top_right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
+    color: red;
+    background-color: #ffffff;
+    border-radius: 50%;
+    box-shadow: 0 30px 25px rgba(32, 42, 37, 0.386);
+}
+
+.clients .client_bottom {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    padding-bottom: 40px;
+    position: relative;
+}
+
+.clients .client_bottom .client_star {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    border-radius: 50%;
+    position: absolute;
+    left: 24%;
+    top: 42%;
+    transform: translate(-61%, -181%);
+    box-shadow: 0 10px 25px rgba(32, 42, 37, 0.386);
+}
+
+.clients .client_bottom .client_hero img {
+    width: 300px;
+    height: 400px;
+    padding-right: 50px;
+    object-fit: contain;
+}
+
+.clients .client_bottom .client_response {
+    padding-left: 30px;
+}
+
+.clients .client_bottom .client_response h3 {
+    padding-bottom: 30px;
+    margin-bottom: 10px;
+    font-weight: 700;
+}
+
+.clients .client_bottom .client_response p {
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+    font-weight: 500;
+}
+
+.clients .client_bottom .client_response h4 {
+    padding-top: 20px;
+    padding-right: 20px;
+    font-weight: 600;
+}
+
+.clients .client_bottom .client_response h6 {
+    padding-bottom: 30px;
+}
+
+.clients .client_bottom .client_response button {
+    width: 50px;
+    height: 50px;
+    border: none;
+    outline: none;
+    background-color: #fff;
+    margin-right: 20px;
+    border-radius: 50%;
+    box-shadow: 0 10px 25px rgba(32, 42, 37, 0.386);
 }
